# Qntropy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: copilot-instructions.md
docs/: Design Document.md  Product Requirements Document.md
src/qntropy/: __init__.py  __main__.py
src/qntropy/cli/: __init__.py  main.py
src/qntropy/importers/: __init__.py  cointracking.py
src/qntropy/models/: __init__.py  transaction.py
src/qntropy/utils/: __init__.py  exceptions.py  serializers.py
tests/fixtures/: cointracking_sample.csv
tests/integration/: test_cointracking_integration.py
tests/unit/: test_cointracking_importer.py  test_transaction_models.py
