[tool.poetry]
name = "qntropy"
version = "0.1.0"
description = "Cryptocurrency tax reporting system for Spanish investors"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "qntropy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2"
requests = "^2.32"
pydantic = "^2.11"
typer = {extras = ["all"], version = "^0.15"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^6.1"
mypy = "^1.15"
ruff = "^0.8"
black = "^25.1"
pre-commit = "^4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
qntropy = "qntropy.cli.main:app"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = ["py311"]
select = ["E", "F", "W", "I", "N", "D"]
ignore = ["D203", "D212"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D"]
